# Fori

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  package-lock.json  package.json
.ai/: agent-routes.json  claude-config.json  codex-config.json  manifest.json
.ai/handoffs/: FORI-041-REVIEW.md  FORI-041.md  FORI-042.md  FORI-043-implement.md  FORI-044-full-implement.md  FORI-046-implement.md  FORI-050-round2-implement.md  FORI-080.md  FORI-081.md  FORI-082.md  FORI-086.md  FORI-089.md  FORI-096-r3-design.md  FORI-097-r3-implement.md  PENDING_CLAUDE_RESUME.md
.ai/orchestration/: AUTH_PERSISTENCE.md  CROSS_SWAP_PROTOCOL.md  ECC_SETUP.md  MODEL_ROUTING_MATRIX.json  QUOTA_LEDGER.md  QUOTA_ROUTING.md  RESUME_ORCHESTRATION.md  claude-routing.json  codex-routing.json  dispatch-log.jsonl  quota-ledger.json  quota-ledger.schema.json
.ai/plan/: current.md
.ai/prompts/: FORI-030-review.md  design-task.md  implement-task.md  review-task.md
.ai/scripts/: limit-interrupt-handler.sh
.claude/: settings.json
.github/workflows/: ci.yml
apps/api/: main.py  pyproject.toml
apps/api/adapters/: hermes.py  interface.py  openclaw.py
apps/api/kernel/: __init__.py  cache.py  lock.py  notary.py
apps/api/routers/: __init__.py
apps/api/schemas/: __init__.py
docs/: AGENT_BEST_PRACTICES.md  AGENT_PAGE_CONTRACTS.md  ARCHITECTURE.md  CANON.md  CO_CREATION_FISSION.md  FEATURE_INVENTORY.md  MIGRATION-TAILWIND4.md  PRD.md  PRICING_MATCHING.md  ROLE_UX_MATRIX.md  SPEC.md  TASK_BREAKDOWN.md  UI_DESIGN.md
prototype/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
(+160 files in other folders)
